--- a/Source/kCura.IntegrationPoints.FilesDestinationProvider.Tests.Integration/TestCases/Resources/ExpectedOutput.resx
+++ b/Source/kCura.IntegrationPoints.FilesDestinationProvider.Tests.Integration/TestCases/Resources/ExpectedOutput.resx
@@ -117,8 +117,11 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+    <data name="IPROFullText" xml:space="preserve">
+    <value>fdsfsdsafasdfdsfsd</value>
+  </data>
   <data name="IPRO" xml:space="preserve">
-    <value>fsdfsdfsdfsdf</value>
+    <value>czekolada</value>
   </data>
   <data name="Opticon" xml:space="preserve">
     <value>AMEYERS_0000757,0,.\0\IMAGES\1\AMEYERS_0000757.tif,Y,,,1
